// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change tabs data 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line"></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: 0%;">
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <div><span>title2</span></div>
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab"><span class="van-ellipsis">
          
        </span></div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: 0%;">
      <div class="van-tab__pane van-tab__pane--active">
        <!---->
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <div><span>title2</span></div>
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: 0%;">
      <div class="van-tab__pane van-tab__pane--active">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: -100%;">
      <div class="van-tab__pane van-tab__pane--inactive">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--active">
        Text
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: 0%;">
      <div class="van-tab__pane van-tab__pane--active">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: -100%;">
      <div class="van-tab__pane van-tab__pane--inactive">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--active">
        Text
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab van-tab--active">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: -100%;">
      <div class="van-tab__pane van-tab__pane--inactive">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--active">
        Text
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 4`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap van-hairline--top-bottom">
    <div class="van-tabs__nav van-tabs__nav--line" style="border-color: #f44;">
      <div class="van-tabs__line" style="width: 2px; background-color: rgb(255, 68, 68);"></div>
      <div class="van-tab van-tab--active"><span class="van-ellipsis">
          title1
        </span></div>
      <div class="van-tab">
        <div><span>title2</span></div>
      </div>
      <div class="van-tab van-tab--disabled"><span class="van-ellipsis">
          title3
        </span></div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div class="van-tabs__track" style="left: 0%;">
      <div class="van-tab__pane van-tab__pane--active">Text
        <!---->
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        Text
      </div>
      <div class="van-tab__pane van-tab__pane--inactive">
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;
